k8s/development/comprasback-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comprasback-dpl
spec:
  template:
    spec:
      containers:
        - name: comprasback
