k8s/development/inventario-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventario-dpl
spec:
  template:
    spec:
      containers:
      - name: inventario
